<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".student_login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="265dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/blur"
        app:srcCompat="@drawable/blur" />

    <TextView
        android:id="@+id/student_login_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="319dp"
        android:text="@string/student_login"
        android:textColor="#C9FBFA"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/sl_email"
        android:layout_width="312dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="283dp"
        android:hint="Email"
        android:background="@drawable/custom_edittext_bg"
        android:drawableLeft="@drawable/ic_email"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/sl_pass"
        android:layout_width="312dp"
        android:hint="@string/sl_password"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="207dp"
        android:background="@drawable/custom_edittext_bg"
        android:drawableLeft="@drawable/ic_password"
        android:drawableStart="@drawable/ic_password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sl_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="107dp"
        android:background="@drawable/custom_btn_bg"
        android:text="@string/t_login"
        android:onClick="Login"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100dp"
        android:text="@string/don_t_have_account"
        android:textStyle="italic"
        android:textColor="#C9FBFA"
        android:textSize="14sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="100dp" />

    <Button
        android:id="@+id/goto_student_signup"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="106dp"
        android:layout_marginLeft="130dp"
        android:background="@drawable/custom_btn_bg"
        android:text="@string/goto_sign_up"
        android:onClick="gotoStdudentSignup"
        android:textSize="10sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="106dp"
        android:layout_marginStart="130dp" />


</RelativeLayout>