<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".student_signup">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="265dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/blur"
        app:srcCompat="@drawable/blur" />

    <TextView
        android:id="@+id/student_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text="Student Signup"
        android:textColor="#C9FBFA"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ss_name"
        android:layout_width="312dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:background="@drawable/custom_edittext_bg"
        android:drawableLeft="@drawable/ic_username"
        android:ems="10"
        android:hint="Fullname"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/ic_username" />

    <EditText
        android:id="@+id/ss_email"
        android:layout_width="312dp"
        android:layout_height="40dp"
        android:layout_marginTop="355dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_edittext_bg"
        android:drawableLeft="@drawable/ic_pin"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email" />

    <EditText
        android:id="@+id/ss_rollnumber"
        android:layout_width="312dp"
        android:layout_height="40dp"
        android:layout_marginTop="410dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_edittext_bg"
        android:drawableLeft="@drawable/ic_pin"
        android:ems="10"
        android:hint="@string/ss_roll_number"
        android:inputType="number"
        android:drawableStart="@drawable/ic_pin" />

    <EditText
        android:id="@+id/ss_pass"
        android:layout_width="312dp"
        android:layout_height="40dp"
        android:layout_marginTop="465dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_edittext_bg"
        android:drawableLeft="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/ss_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password" />

    <EditText
        android:id="@+id/ss_cpass"
        android:layout_width="312dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_edittext_bg"
        android:drawableLeft="@drawable/ic_password"
        android:layout_marginTop="520dp"
        android:ems="10"
        android:hint="@string/ss_confirm_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password" />

    <EditText
        android:id="@+id/ss_dept"
        android:layout_width="312dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="575dp"
        android:background="@drawable/custom_edittext_bg"
        android:drawableLeft="@drawable/ic_department"
        android:ems="10"
        android:hint="@string/ss_department"
        android:inputType="text"
        android:drawableStart="@drawable/ic_department" />

    <Button
        android:id="@+id/s_signup"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="640dp"
        android:background="@drawable/custom_btn_bg"
        android:onClick="createAccount"
        android:text="@string/t_sign_up"
        android:textSize="16sp" />

</RelativeLayout>