<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:background= "#6A576C"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="368dp"
        android:layout_height="272dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        app:srcCompat="@drawable/logo" />



    <RelativeLayout
        android:id="@+id/main_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="278dp"
            android:text="@string/login_as"
            android:textColor="#C9FBFA"
            android:textSize="15sp" />

        <Button
            android:id="@+id/teacher"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="203dp"
            android:background="@drawable/custom_btn_bg"
            android:text="@string/teacher"
            android:onClick="gotoTeacher"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/student"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="131dp"
            android:background="@drawable/custom_btn_bg"
            android:text="@string/student"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:onClick="gotoStudent"
            android:typeface="normal" />




    </RelativeLayout>


</RelativeLayout>